[metadata]
name = copanier
version = 0.0.2

[options]
packages = find:
include_package_data = True
install_requires =
    Jinja2==2.10
    openpyxl==2.6.1
    PyJWT==1.7.1
    PyYAML==5.1
    roll==0.10.1
    ujson==1.35
    minicli==0.4.4
    python-slugify==3.0.2
    debts==0.4
    emails==0.5
    Weasyprint==50

[options.extras_require]
dev =
    hupper==1.6.1
    minicli==0.4.4
    usine==0.2.2
test =
    pyquery==1.4.0
    pytest==4.3.1
    pytest-asyncio==0.10.0
prod =
    gunicorn==19.9.0
    uvloop==0.12.2


[options.entry_points]
console_scripts =
    copanier = copanier:main
