[metadata]
name = copanier
version-from-file = copanier/__init__.py

[options]
packages = find:
include_package_data = True
install_requires =
    Jinja2==2.11.2
    openpyxl==3.0.5
    PyJWT==1.7.1
    PyYAML==5.3.1
    roll==0.13.0
    ujson==3.2.0
    minicli==0.5.0
    python-slugify==4.0.1
    debts==0.5
    emails==0.6
    Weasyprint==51
    MarkupSafe==2.0.1

[options.extras_require]
dev =
    hupper==1.10.2
    minicli==0.5.0
    usine==0.2.3
test =
    pyquery==1.4.1
    pytest==6.0.2
    pytest-asyncio==0.14.0
prod =
    gunicorn==20.0.4
    uvloop==0.14.0


[options.entry_points]
console_scripts =
    copanier = copanier:main
